--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz-jboss</artifactId>
+			<version>2.1.7</version>
+		</dependency>
 	</dependencies>
 </project>
