--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz-jboss</artifactId>
-			<version>2.1.7</version>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>asm</groupId>
@@ -48,6 +48,11 @@
 			<version>2.6</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.perf4j</groupId>
 			<artifactId>perf4j</artifactId>
 			<version>0.9.16</version>
@@ -61,6 +66,26 @@
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.12.1</version>
+		</dependency>
+		<dependency>
+			<groupId>jmagick</groupId>
+			<artifactId>jmagick</artifactId>
+			<version>6.6.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lifeix.l06</groupId>
+			<artifactId>gif4j</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.im4java</groupId>
+			<artifactId>im4java</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sharneng</groupId>
+			<artifactId>gm4java</artifactId>
+			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
 
