--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.zhch</groupId>
+			<artifactId>javatool</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.2</version>
