--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
-			<version>2.12.1</version>
+			<version>2.12.4</version>
 		</dependency>
 		<dependency>
 			<groupId>jmagick</groupId>
@@ -111,6 +111,11 @@
 			<groupId>org.apache.qpid</groupId>
 			<artifactId>qpid-amqp-1-0-client-jms</artifactId>
 			<version>0.26</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
 		</dependency>
 
 	</dependencies>
