--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<!-- javaEE api -->
+		<dependency>
+			<groupId>javaee</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>5</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.zhch</groupId>
 			<artifactId>javatool</artifactId>
@@ -116,6 +123,12 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.3</version>
+		</dependency>
+		<!-- 二维码操作 -->
+		<dependency>
+			<groupId>net.glxn</groupId>
+			<artifactId>qrgen</artifactId>
+			<version>1.4</version>
 		</dependency>
 
 	</dependencies>
