--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
 			<version>5</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- 测试 -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.8</version>
+		</dependency>
+		<!-- time  string 工具类 -->
 		<dependency>
 			<groupId>com.zhch</groupId>
 			<artifactId>javatool</artifactId>
@@ -130,7 +137,12 @@
 			<artifactId>qrgen</artifactId>
 			<version>1.4</version>
 		</dependency>
-
+		<!-- google guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
