--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,14 @@
 			<artifactId>junrar</artifactId>
 			<version>0.7</version>
 		</dependency>
+		
+		
+		<!-- 缓存框架 -->
+		<dependency>
+			<groupId>org.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>3.0.0.m3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -166,8 +174,8 @@
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<source>1.6</source>
-						<target>1.6</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 			</plugins>
