--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,14 @@
 			<artifactId>ehcache</artifactId>
 			<version>3.0.0.m3</version>
 		</dependency>
+		
+		<!-- libsvm -->
+		<dependency>
+			<groupId>tw.edu.ntu.csie</groupId>
+			<artifactId>libsvm</artifactId>
+			<version>3.17</version>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
