--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>2.12.4</version>
+			<artifactId>mongodb-driver</artifactId>
+			<version>3.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>jmagick</groupId>
