--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,14 @@
 			<artifactId>commons-dbutils</artifactId>
 			<version>1.6</version>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<scope>runtime</scope>
+			<version>1.17</version>
+		</dependency>
 
 
 	</dependencies>
